# metrajTest

./: .gitignore  README.md  YM-K-Amfi Mahal Metraj_R22.xlsx  pyproject.toml  requirements.txt
build_compare_geometry_only/: dogrulama_ozeti.txt
build_compare_kumluca_gt/: dogrulama_ozeti.txt
data/samples/: alternate.dxf  demo.dxf
docs/: calibration_guide.md  claudeResult.md  kullanım_exe.md  result.md
metraj/: __init__.py  cli.py  pipeline.py
metraj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
metraj/app/: calibration_wizard.py  main_window.py  structural_config_dialog.py
metraj/benchmarks/: __init__.py  bench_geometry_vs_reference.py
metraj/config/: layer_map.yaml  poz_library.yaml  project.yaml  tip_definitions.yaml
metraj/config/locale/: plan_labels_en.yaml  plan_labels_tr.yaml  structural_signal_hints.yaml
metraj/config/methods/: custom_template.yaml  geometry_full.yaml  geometry_half.yaml
metraj/config/references/: kumluca.yaml  kumluca_geometry_only.yaml
metraj/config/templates/: layer_map.yaml  (+4 more)
metraj/scripts/: build_user_guide.py  poc_groundtruth.py
metraj/tests/: conftest.py  fixtures.py  test_calibration_wizard.py  test_feedback_store.py  test_floor_segmenter_axes.py  test_geometric_classify.py  test_gt_reference.py  test_insert_explode.py  test_layer_scoring.py  test_pipeline.py  test_plan_labels_locale.py  test_profile_fitter.py  test_profile_trainer.py  test_project_agnostic.py  test_revision_diff.py  test_structural_config_dialog.py  test_structural_pipeline.py
ornekRef/: kumluca kaba.xlsx
(+43 files in other folders)
