[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metraj"
version = "0.1.0"
description = "AutoCAD DWG/DXF tabanli mimari metraj otomasyonu"
authors = [{name = "Metraj Otomasyon"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ezdxf>=1.4.0",
    "shapely>=2.0",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "rtree>=1.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=7.4"]

[project.scripts]
metraj = "metraj.cli:main"

[tool.setuptools.packages.find]
include = ["metraj*"]

[tool.setuptools.package-data]
metraj = [
  "config/*.yaml",
  "config/references/*.yaml",
]
